[gd_scene load_steps=4 format=2]

[ext_resource path="res://RecipeBook/RecipeBook.gd" type="Script" id=1]
[ext_resource path="res://RecipeBook/Book.png" type="Texture" id=2]
[ext_resource path="res://RecipeBook/BookIcon.png" type="Texture" id=3]

[node name="RecipeBook" type="Node2D"]
position = Vector2( 974.889, 507.959 )
script = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 752.219
margin_top = -489.472
margin_right = 1008.22
margin_bottom = -233.472
rect_scale = Vector2( 0.676769, 0.676769 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BookSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="NextButton" type="Button" parent="BookSprite"]
margin_left = 270.0
margin_top = 220.0
margin_right = 395.0
margin_bottom = 290.0
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreviousButton" type="Button" parent="BookSprite"]
margin_left = -400.0
margin_top = 220.0
margin_right = -271.0
margin_bottom = 290.0
text = "Previous"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="BookSprite"]
margin_left = -388.04
margin_top = -273.859
margin_right = -26.0397
margin_bottom = -191.859
rect_scale = Vector2( 2.32942, 2.32942 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Title"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IngredientsLabel" type="Label" parent="BookSprite"]
margin_left = -394.566
margin_top = -90.5097
margin_right = -243.566
margin_bottom = -51.5097
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Ingredients"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="BookSprite/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="BookSprite/PreviousButton" to="." method="_on_PreviousButton_pressed"]
